tablegen-parser/src/snapshots/tablegen_parser__grammar__tests__field_let-3.snap
---
source: tablegen-parser/src/grammar.rs
expression: "parse(\"class Foo { let A = 1\")"
---
File
  StatementList
    Class
      Class@0..5 `class`
      Whitespace@5..6 ` `
      Identifier
        Id@6..9 `Foo`
      Whitespace@9..10 ` `
      RecordBody
        ParentClassList
        Body
          LBrace@10..11 `{`
          Whitespace@11..12 ` `
          FieldLet
            Let@12..15 `let`
            Whitespace@15..16 ` `
            Identifier
              Id@16..17 `A`
            Whitespace@17..18 ` `
            Equal@18..19 `=`
            Whitespace@19..20 ` `
            Value
              Integer
                IntVal@20..21 `1`
            Error(21:21:expected ';' after let expression, )
          Error(21:21:expected RBrace, )

