tablegen-parser/src/snapshots/tablegen_parser__grammar__tests__field_let.snap
---
source: tablegen-parser/src/grammar.rs
expression: "parse(\"class Foo { let\")"
---
File
  StatementList
    Class
      Class@0..5 `class`
      Whitespace@5..6 ` `
      Identifier
        Id@6..9 `Foo`
      Whitespace@9..10 ` `
      RecordBody
        ParentClassList
        Body
          LBrace@10..11 `{`
          Whitespace@11..12 ` `
          FieldLet
            Let@12..15 `let`
            Error(15:15:expected field identifier after let, )
            Error(15:15:unknown token when parsing a value, )
            Error(15:15:expected '=' in let expression, )
          Error(15:15:expected RBrace, )

