tablegen-parser/src/snapshots/tablegen_parser__grammar__tests__if.snap
---
source: tablegen-parser/src/grammar.rs
expression: "parse(\"if true then { class Foo; }\")"
---
File
  StatementList
    If
      If@0..2 `if`
      Whitespace@2..3 ` `
      Value
        InnerValue
          Boolean
            TrueVal@3..7 `true`
      Whitespace@7..8 ` `
      Then@8..12 `then`
      Whitespace@12..13 ` `
      LBrace@13..14 `{`
      Whitespace@14..15 ` `
      Class
        Class@15..20 `class`
        Whitespace@20..21 ` `
        Identifier
          Id@21..24 `Foo`
        RecordBody
          ParentClassList
          Body
            Semi@24..25 `;`
      Whitespace@25..26 ` `
      RBrace@26..27 `}`

