tablegen-parser/src/snapshots/tablegen_parser__grammar__tests__include.snap
---
source: tablegen-parser/src/grammar.rs
expression: "parse(r#\"include \"foo.td\"\"#)"
---
(
    Root@0..16
      StatementList@0..16
        Include@0..16
          IncludeKw@0..7 "include"
          Whitespace@7..8 " "
          String@8..16
            StrVal@8..16 "\"foo.td\""
    ,
    [],
)
