tablegen-parser/src/snapshots/tablegen_parser__grammar__tests__inner_value.snap
---
source: tablegen-parser/src/grammar.rs
expression: "parse(\"class Foo<int A = Hoge.Fuga, bits<2> B = Hoge{0...1}, list<int> C = Hoge[0...1]>;\")"
---
File
  StatementList
    Class
      Class@0..5 `class`
      Whitespace@5..6 ` `
      Identifier
        Id@6..9 `Foo`
      TemplateArgList
        Less@9..10 `<`
        TemplateArgDecl
          IntType
            Int@10..13 `int`
          Whitespace@13..14 ` `
          Identifier
            Id@14..15 `A`
          Whitespace@15..16 ` `
          Equal@16..17 `=`
          Whitespace@17..18 ` `
          Value
            InnerValue
              Identifier
                Id@18..22 `Hoge`
              FieldSuffix
                Dot@22..23 `.`
                Identifier
                  Id@23..27 `Fuga`
        Comma@27..28 `,`
        Whitespace@28..29 ` `
        TemplateArgDecl
          BitsType
            Bits@29..33 `bits`
            Less@33..34 `<`
            Integer
              IntVal@34..35 `2`
            Greater@35..36 `>`
          Whitespace@36..37 ` `
          Identifier
            Id@37..38 `B`
          Whitespace@38..39 ` `
          Equal@39..40 `=`
          Whitespace@40..41 ` `
          Value
            InnerValue
              Identifier
                Id@41..45 `Hoge`
              RangeSuffix
                LBrace@45..46 `{`
                RangeList
                  RangePiece
                    Integer
                      IntVal@46..47 `0`
                    DotDotDot@47..50 `...`
                    Integer
                      IntVal@50..51 `1`
                RBrace@51..52 `}`
        Comma@52..53 `,`
        Whitespace@53..54 ` `
        TemplateArgDecl
          ListType
            List@54..58 `list`
            Less@58..59 `<`
            IntType
              Int@59..62 `int`
            Greater@62..63 `>`
          Whitespace@63..64 ` `
          Identifier
            Id@64..65 `C`
          Whitespace@65..66 ` `
          Equal@66..67 `=`
          Whitespace@67..68 ` `
          Value
            InnerValue
              Identifier
                Id@68..72 `Hoge`
              SliceSuffix
                LSquare@72..73 `[`
                SliceElements
                  SliceElement
                    Value
                      InnerValue
                        Integer
                          IntVal@73..74 `0`
                    DotDotDot@74..77 `...`
                    Value
                      InnerValue
                        Integer
                          IntVal@77..78 `1`
                RSquare@78..79 `]`
        Greater@79..80 `>`
      RecordBody
        ParentClassList
        Body
          Semi@80..81 `;`

