tablegen-parser/src/snapshots/tablegen_parser__grammar__tests__let-2.snap
---
source: tablegen-parser/src/grammar.rs
expression: "parse(\"let A = 1\")"
---
File
  StatementList
    Let
      Let@0..3 `let`
      Whitespace@3..4 ` `
      LetList
        LetItem
          Identifier
            Id@4..5 `A`
          Whitespace@5..6 ` `
          Equal@6..7 `=`
          Whitespace@7..8 ` `
          Value
            Integer
              IntVal@8..9 `1`
      Error(9:9:expected 'in' at end of top-level 'let', )
      Error(9:9:expected class, def, defm, defset, multiclass, let or foreach, )
      Error
        Eof@9..9 ``

