tablegen-parser/src/snapshots/tablegen_parser__grammar__tests__let_item.snap
---
source: tablegen-parser/src/grammar.rs
expression: "parse(\"let\")"
---
(
    Root@0..3
      StatementList@0..3
        Let@0..3
          LetKw@0..3 "let"
          LetList@3..3
          StatementList@3..3
            Error@3..3
              Eof@3..3 ""
    ,
    [
        SyntaxError {
            range: 3..3,
            message: "expected 'in' at end of top-level 'let'",
        },
        SyntaxError {
            range: 3..3,
            message: "expected class, def, defm, defset, multiclass, let or foreach",
        },
    ],
)
